styles.css
body {
    text-align: center;
    margin: 0 auto;
}

a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
}

a:hover, button:hover {
    color: blue;
}

button {
    color: white;
    background-color: #3882F6;
    padding: 10px 30px;
    border-radius: 10px;
}


.header {
    background-color: #1F2937;
    color: white;
    margin: 0;
}

#header-flexbox-1{
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    margin: 0 17%;
}

#header-text{
    text-align: start;
}

#header-flexbox-2{
    display:flex;
    justify-content: center;
    padding: 3rem;
    gap: 5%;
    width: 60%;
    margin: 0 15% 0 15%;
}

#header-nav{
    margin-top: 1.7rem;
    display: flex;
    gap: 20px;
}


img {
    height: 250px;
    width: 400px;
}

.section-1 {
    padding-top: 1rem;
    background-color: white;
}

#section-1-flexbox {
    margin: 3rem 0%;
    display: flex;
    justify-content: center;
    gap: 5%;
}

#flex-img {
    width: 200px;
    height: 200px;
    border: 5px solid;
    border-color: #3882F6;
    border-radius: 10px;
}

.section-2 {
    background-color: #e5e7eb;
    font-size: 36px;
    color:#1f2937;
    padding: 2rem;
}

#section-2-quote{
    width: 75%;
    margin: auto;
    text-align: left;
}

#section-2-signature{
    text-align: right;
    padding-right: 3rem;
}

.section-3 {
    color: white;
    display: flex;
    justify-content: center;
    padding: 3rem;
    text-align: left;
}

#blue-box {
    background-color: #3882F6;
    width: 50%;
    display: flex;
    justify-content: center;
    gap: 20%;
    border-radius: 10px;
    padding: 1rem 10%;
}

#blue-box-btn{
    margin-top: 30%;
    border: 2px solid white;
}

.footer {
    background-color: #1F2937;
    color: white;
    padding: 1rem;
}

